--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="top">
                 <div class="logo">
                     <img src="./images/logo.jpg" alt="">
-                    <h2 class="titleApp"">EGAT<span class="danger">IOR</span></h2>
+                    <h2 class="titleApp">EGAT<span class="danger">IOR</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="mdi mdi-window-close"></span>
